--- a/WSUI.Module/Service/ResourceTemplate.xaml
+++ b/WSUI.Module/Service/ResourceTemplate.xaml
@@ -38,7 +38,7 @@
     </Style>
 
     <Style x:Key="FromStyleWidthColumn" TargetType="ColumnDefinition">
-        <Setter Property="Width" Value="200" />
+        <Setter Property="Width" Value="Auto" />
     </Style>
 
 
@@ -213,6 +213,27 @@
             </Grid>
         </DockPanel>
     </DataTemplate>
+    
+    <DataTemplate x:Key="CommandTemplate">
+        <DockPanel LastChildFill="True">
+            <Image Grid.Column="0" Source="..\Images\more1.png" Style="{StaticResource ImageStyle}" DockPanel.Dock="Left"/>
+            <ctrl:HightliteHyperlink Text="{Binding Path=Name}" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"  
+                                                       Margin="5">
+                <ctrl:HightliteHyperlink.Style>
+                    <Style TargetType="ctrl:HightliteTextBlockBase">
+                        <Setter Property="ctrl:HightliteTextBlockBase.ForegroundColor" Value="Blue"/>
+                        <Style.Triggers>
+                            <Trigger Property="Control.IsMouseOver" Value="True">
+                                <Setter Property="ctrl:HightliteTextBlockBase.ForegroundColor" Value="Red" />
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </ctrl:HightliteHyperlink.Style>
+            </ctrl:HightliteHyperlink>
+        </DockPanel>
+    </DataTemplate>
+    
+    
 
 
 
@@ -224,6 +245,7 @@
             AttachmentTemplate="{StaticResource ResourceKey=AttachmentTemplate}"
             CalendarTemplate="{StaticResource ResourceKey=CalendarTemplate}"
             PictureTemplate="{StaticResource ResourceKey=PictureTemplate}"
+            CommandTemplate="{StaticResource ResourceKey=CommandTemplate}"
             />
     
     
