--- a/WSUI.Control/WSMainControl.xaml
+++ b/WSUI.Control/WSMainControl.xaml
@@ -6,6 +6,7 @@
              xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
              xmlns:cal="http://www.codeplex.com/CompositeWPF"
              Height="650" Width="950" MinHeight="450" MinWidth="725" 
+             Background="White"
              >
     <UserControl.Resources>
         <ResourceDictionary>
