--- a/WSUI.Module/Service/ResourceTemplate.xaml
+++ b/WSUI.Module/Service/ResourceTemplate.xaml
@@ -60,7 +60,7 @@
     <DataTemplate x:Key="EmailTemplate">
         <DockPanel LastChildFill="True">
             <Image Grid.Column="0" Source="..\Images\mail.png" Style="{StaticResource ImageStyle}" DockPanel.Dock="Left"/>
-            <TextBlock Text="{Binding Path=Date,Converter={StaticResource dateConverter}}"  Margin="5" DockPanel.Dock="Right"/>
+            <TextBlock Text="{Binding Path=DateModified,Converter={StaticResource dateConverter}}"  Margin="5" DockPanel.Dock="Right"/>
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Style="{StaticResource NameStyleWidthColumn}" />
